fix(core): preserve settlement solvency and bound lifecycle index work